# datahub

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LLMs.txt  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
docs/: README.md  advanced.md  api-reference.md  changelog.md  connectors.md  developer.md  faq.md  guide.md  introduction.md  metadata.json  overview.md  quick-start.md  solutions.md  standard-plans.md
docs/advanced/: README.md  advanced-query.md  batch-processing.md  cdc-realtime.md  chain-trigger.md  custom-functions.md  custom-scripts.md  data-aggregation.md  data-diff-sync.md  data-modeling.md  data-recovery.md  data-transformation.md  error-handling.md  high-availability.md  integration-strategy.md  parser.md  performance-tuning.md  relational-lookup.md  restful-api-adapter.md  security-policies.md  wechat-notification.md  write-back.md
docs/api-reference/: README.md  authentication.md  endpoints.md  error-codes.md  openapi.md  ops-guide.md  rate-limiting.md
docs/changelog/: README.md  v3.2.0.md  v3.3.0.md  v3.4.0.md  v3.5.0.md  v3.5.1.md
docs/connectors/: README.md  database.md  ecommerce.md  erp.md  oa.md  saas.md
docs/developer/: README.md  adapter-development.md  api-overview.md  api-param-template.md  authentication.md  custom-connector.md  custom-processor.md  debugging-testing.md  event-driven.md  guide.md  kafka-integration.md  lifecycle.md  mongodb-advanced.md  open-data-api.md  plugin-system.md  python-adapter.md  sap-integration.md  sdk.md  webhook.md  (+2 more)
scripts/: check_markdown_links.py
tests/: test_app.py
(+185 files in other folders)
